Add credential management (#40)
- Add common.credentials module for credential management
- Replace spotify docker maven plugin with fabric8 maven docker plugin
- Add Platform Management as new backend service
- Refactor common.parent module and add common.parent.client module in addition to existing common.parent.server module
- Replace external vaultclient library with own vault client implementation
- Replace external consul client library with own consul client implementation
- Update Vault to version 1.21.2
- Update Consul to version 1.22.3 (resolve #37)
- Refactor JaCoCo code coverage collection 
- Add push of code coverage results to coveralls (resolve #28)
- Update build pipeline to Java 21